--- a/git.html
+++ b/git.html
@@ -5,6 +5,7 @@
         .container{
             width: 200px;
             height: 300px;
+            text-align: center;
         }
     </style>
 </head>
