--- a/git.html
+++ b/git.html
@@ -6,6 +6,9 @@
             width: 200px;
             height: 300px;
             text-align: center;
+            width: 200px;
+            height: 300px;
+            text-align: center;
         }
     </style>
 </head>
