--- a/git.html
+++ b/git.html
@@ -15,9 +15,9 @@
 <body>
     <div class="container">
         JD
-        <p>Hello sir
-            How are you
-            I am fine, where r u 
+        <p>Hello sir,
+            How are you.
+            I am fine, where r u .
         </p>
     </div>
 
