--- a/git.html
+++ b/git.html
@@ -15,10 +15,9 @@
 <body>
     <div class="container">
         JD
-        <p>Hello sir,
-            How are you.
-            I am fine, where r u .
-        </p>
+        <p>Hello sir,</p>
+        <p> How are you.</p>   
+        <p>I am fine, where r u .</p>
     </div>
 
     
