--- a/git.html
+++ b/git.html
@@ -8,7 +8,6 @@
             text-align: center;
             width: 200px;
             height: 300px;
-            text-align: center;
         }
     </style>
 </head>
@@ -18,6 +17,7 @@
         <p>Hello sir,</p>
         <p> How are you.</p>   
         <p>I am fine, where r u .</p>
+        <p>Hope u have a great day.</p>
     </div>
 </body>
 </html>
