--- a/git.html
+++ b/git.html
@@ -3,21 +3,16 @@
 <head>
     <style>
         .container{
-            width: 200px;
+            width: auto;
             height: 300px;
-            text-align: center;
-            width: 200px;
-            height: 300px;
-        }
     </style>
 </head>
 <body>
     <div class="container">
         JD
         <p>Hello sir,</p>
-        <p> How are you.</p>   
-        <p>I am fine, where r u .</p>
-        <p>Hope u have a great day.</p>
+        <p> How are you. I am fine, where r u. Hope u have a great day.</p>   
+    
     </div>
 </body>
 </html>
